<resources>
    <string name="app_name">App</string>
    <string name="market">market</string>
    <string name="welcome_to_market">خوش آمدید به مارکت</string>
    <string name="signup">ثبت نام</string>
    <string name="do_you_have_acc">قبلا عضو شده اید؟</string>
    <string name="sign_in">ورود</string>
    <string name="username">نام کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="remember_me">من را به یاد داشته باش</string>
    <string name="forgot_pw">کلمه عبور را فراموش کرده ام</string>
    <string name="dont_have_acc">حساب کاربری ندارید؟</string>
    <string name="create_acc">ساخت اکانت</string>
    <string name="email">ایمیل</string>
    <string name="r_password">تکرار کلمه عبور</string>
    <string name="role">شرایط و قوانین</string>
    <string name="r_role">را قبول دارم</string>
    <string name="password_recovery">بازیابی کلمه عبور</string>
    <string name="info_1">آدرس ایمیلی را که هنگام عضویت استفاده کردید وارد کنید و ما دستورالعمل‌هایی را برای بازنشانی رمز عبورتان برای شما ارسال می‌کنیم.</string>
    <string name="info_2">به دلایل امنیتی، ما رمز عبور شما را ذخیره نمی کنیم. پس مطمئن باشید که ما هرگز رمز عبور شما را از طریق ایمیل ارسال نمی کنیم.</string>
    <string name="info_3">شما میتوانید از طریق لینک ارسال شده به ایمیل شما کلمه خود را تغییر دهید.</string>
    <string name="submit">ارسال</string>
    <string name="change_password">تغییر کلمه عبور</string>
    <string name="name">نام کاربر</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="ok">باشه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">صحفه اصلی</string>
    <string name="name_item">کیک روکش شکلاتی با تزیین برنجک ایسترم</string>
    <string name="item_code">کد محصول :</string>
    <string name="quantity">تعداد :</string>
    <string name="Price">قیمت :</string>
    <string name="Available">موجود</string>
    <string name="category">دسته بندی :</string>
    <string name="home_nav">خانه</string>
    <string name="category_nav">دسته بندی</string>
    <string name="cart_nav">سبد خرید</string>
    <string name="profile_nav">پروفایل</string>
    <string name="search">جستجو</string>
    <string name="products">لیست محصولات</string>
    <string name="descritpion">توضیحات</string>
    <string name="info_4">تصاویر در یک پست مفید هستند، اما مطمئن شوید که پست بدون آنها همچنان واضح است. اگر تصاویر کد یا پیام های خطا را ارسال می کنید، کد یا پیام واقعی را مستقیماً در پست کپی و جایگذاری کنید یا تایپ کنید.</string>
    <string name="info">مشخصات</string>
    <string name="mojodi_2">موجودی انبار 2 :</string>
    <string name="modjodi_1">موجودی انبار 1 :</string>
    <string name="item">کیک و کلوچه</string>
    <string name="_300">300 بسته</string>
    <string name="_5000">5000</string>
    <string name="_1">1</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="toman">تومان</string>
</resources>