<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:background="@drawable/title_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/shabnam_bold"
                android:text="@string/create_acc"
                android:textColor="@color/primary_color"
                android:textSize="20sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_f_name"
                    android:layout_width="355dp"
                    android:layout_height="56dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="center"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_l_name"
                    android:layout_width="355dp"
                    android:layout_height="56dp"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:background="@drawable/edit_text"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_username"
                    android:layout_width="355dp"
                    android:layout_height="56dp"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:background="@drawable/edit_text"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="355dp"
                    android:layout_height="56dp"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:background="@drawable/edit_text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pw"
                    android:layout_width="355dp"
                    android:layout_height="56dp"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:background="@drawable/edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    tools:targetApi="m" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButton"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/style_btn_gray"
                android:fontFamily="@font/shabnam_bold"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:text="@string/do_you_have_acc"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/shabnam"
                android:text="@string/sign_in"
                android:textColor="@color/primary_color"
                android:textSize="15sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>