<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarycolor"
    tools:context=".ui.home.DescriptionActivity">

    <View
        android:id="@+id/arrow_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/arrow_right"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_back" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="552dp"
        android:background="@drawable/shape_description"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/shabnam_bold"
            android:text="@string/name_item"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginTop="3dp"
            android:backgroundTint="@color/colorGrey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="30dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/shabnam"
                android:text="@string/descritpion"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/shabnam"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/info_4"
                android:textColor="@color/colorGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/shabnam"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/_1"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/item_code"
                    android:textColor="@color/colorGrey" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/item"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/category"
                    android:textColor="@color/colorGrey" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/_300"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/modjodi_1"
                    android:textColor="@color/colorGrey" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tvQuantity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/_300"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/mojodi_2"
                    android:textColor="@color/colorGrey" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorGrey" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="120dp"
                    android:gravity="center_horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMinus"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/minus" />

                    <TextView
                        android:id="@+id/tvCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPlus"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/plus" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/shabnam"
                        android:text="@string/toman"
                        android:layout_marginEnd="2dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/shabnam"
                        android:text="@string/_5000"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/shabnam"
                        android:text="@string/Price"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:backgroundTint="@color/colorGrey" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddToCart"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_btn_blue"
            android:fontFamily="@font/shabnam"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>