<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:background="@drawable/title_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/shabnam_bold"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:textColor="@color/primarycolor"
                android:textSize="20sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_username"
                    android:layout_width="355dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="center"
                    tools:targetApi="m" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pw"
                    android:layout_width="355dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:paddingStart="30dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="center"
                    tools:targetApi="m" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam"
                    android:gravity="center"
                    android:text="@string/forgot_pw"
                    android:textColor="@color/primarycolor"
                    android:textSize="11sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/shabnam"
                    android:text="@string/remember_me"
                    android:textAlignment="center"
                    android:layout_marginStart="40dp"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/style_btn_gray"
                android:fontFamily="@font/shabnam_bold"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:text="@string/dont_have_acc"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:text="@string/signup"
                android:textColor="@color/primarycolor"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>