<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        tools:context=".activities.MainActivity">


        <View
            android:id="@+id/vector_title"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:background="@drawable/title_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shabnam"
            android:text="@string/welcome_to_market"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/vector_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vector_title" />

        <View
            android:id="@+id/vector_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/second_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/style_btn_white"
            android:fontFamily="@font/shabnam"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vector_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
            app:layout_constraintVertical_bias="0.253">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:text="@string/do_you_have_acc"
                android:textColor="#AEAEB2"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>